Fix: CORS 403 on OPTIONS preflight with Spring Security
- Permit all OPTIONS requests before authenticated rules in SecurityConfig
- Skip JWT filter for OPTIONS requests in JwtAuthenticationFilter
- Replace wildcard headers with explicit list (safe with allowCredentials=true)
- Trim origin values when splitting FRONTEND_URL to handle spaces after commas
- Add localhost:3000 as default fallback origin alongside 5173

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>